# synthetic-pages

./: .gitignore  AGENTS.md  README.md  bezier_volume_deformation.py  download_scroll5.sh  inference.py  label.py  main.py  match_stitches.py  mesh.py  nrrd_file.py  pyproject.toml  region_sampler.py  requirements.txt  scroll_data_distribution.py  slicer_code.py  stitch.py  stitching-experiments.ipynb  tiffs-to-nrrds.py  unet.py  viewing-constructed-nrrds.ipynb
data_ingestion_scripts/: download_scroll1.sh  download_scroll3.sh  download_scroll5.sh  extract_slices_from_tifstack.sh  gp_2023_voxelisation.sh  instance_labels_from_cubes_and_meshes.py  xyz_mesh_to_zyx.py
datasets/: cube_dataset_base.py  real_scroll_datamodule_cubes.py  synthetic_datamodule_cubes.py
notebooks/: convert-mesh-to-instance-volume.ipynb  howto-generate-synthetic-pages.ipynb  stitching-experiments.ipynb  viewing-constructed-nrrds.ipynb
scripts/: download_scroll1.sh  download_scroll3.sh  infer_all_in_folder.sh  mesh_visualizer.py  old.tiffs-to-nrrds.py  tiffs-to-nrrds-with-labels-unrolled.py  tiffs-to-nrrds.py  xyz_mesh_to_zyx.py
synthetic_pages/: bezier_volume_deformation.py  homogeneous_transform.py  inference.py  instance_labels_from_meshes.py  label.py  main.py  match_stitches.py  mesh_operations.py  nrrd_file.py  region_sampler.py  scroll_data_distribution.py  stitch.py  unet.py  utils.py
synthetic_pages/datasets/: cube_loader.py  instance_volume_batch.py  real_scroll_datamodule_cubes.py  synthetic_datamodule_cubes.py
tests/: test_homogeneous_transform.py  test_nrrd_random_sampling.py
(+6 files in other folders)
