[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-pages"
version = "0.1.1"
description = "A package for generating synthetic pages"
requires-python = ">=3.7"
dependencies = [
    "aiohttp==3.9.5",
    "albucore==0.0.23",
    "albumentations==1.4.24",
    "einops==0.8.0",
    "matplotlib==3.9.0",
    "monai==1.3.2",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "pandas==2.2.3",
    "pillow==10.3.0",
    "scikit-image==0.23.2",
    "scipy==1.13.0",
    "tqdm==4.66.4",
    "pynrrd==1.0.0",
    "PyQt5==5.15.11",
    "vesuvius==0.1.6",
    "vtk==9.3.0",
    "typed-argument-parser==1.10.1",
    "types-python-dateutil==2.9.0.20240316",
    "typing-inspect==0.9.0"
]

[tool.setuptools]
packages = ["synthetic_pages"]
